--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,16 @@
 
 #carousel ul {
   width: 3000px;
-  list-style: none;
-  /* padding: 0; */
+  /* list-style: none; */
+  padding: 0;
 }
 
 #carousel ul li {
   list-style: none;
   @extend .widthhigh;
   display: inline;
+  padding: 0;
+  margin: 0;
 }
 
 /*
